fix item color and added jlabel id